--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -3,6 +3,7 @@
 ---
 <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="/RealmTech/favicon.ico" />
 </head>
 
 <p>Pas encore de téléchargement</p>
