--- a/src/pages/inscription.astro
+++ b/src/pages/inscription.astro
@@ -4,6 +4,7 @@ import InscriptionComponent from "../components/InscriptionComponent.vue";
 ---
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="/RealmTech/favicon.ico" />
 </head>
 
 <div class="hero min-h-screen bg-rt">
