--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@
 ---
 <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="/RealmTech/favicon.ico" />
 </head>
 
 <div class="hero min-h-screen bg-rt">
