--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -1,9 +1,6 @@
 ---
-
+import RealmTechAuthLayout from "../layout/RealmTechAuthLayout.astro";
 ---
-<head>
-    <meta charset="utf-8">
-    <link rel="icon" type="image/x-icon" href="/RealmTech/favicon.ico" />
-</head>
-
-<p>Pas encore de téléchargement</p>
+<RealmTechAuthLayout>
+    <p>Pas encore de téléchargement</p>
+</RealmTechAuthLayout>
