--- a/src/pages/inscription.astro
+++ b/src/pages/inscription.astro
@@ -1,25 +1,22 @@
 ---
 import InscriptionComponent from "../components/InscriptionComponent.vue";
-
+import RealmTechAuthLayout from "../layout/RealmTechAuthLayout.astro";
 ---
-<head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="/RealmTech/favicon.ico" />
-</head>
-
-<div class="hero min-h-screen bg-rt">
-    <div class="hero-content flex-col lg:flex-row-reverse">
-        <div class="text-center lg:text-left text-base-100">
-            <h1 class="text-5xl font-bold">Register now!</h1>
-            <p class="py-6">
-                Avec un compte vous pourez sauvegarder votre inventaire en jeux.
-            </p>
-            <a class="link" href="/RealmTech">
-                back to home
-            </a>
-        </div>
-        <div class="card shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
-            <InscriptionComponent client:load/>
+<RealmTechAuthLayout>
+    <div class="hero min-h-screen bg-rt">
+        <div class="hero-content flex-col lg:flex-row-reverse">
+            <div class="text-center lg:text-left text-base-100">
+                <h1 class="text-5xl font-bold">Register now!</h1>
+                <p class="py-6">
+                    Avec un compte vous pourez sauvegarder votre inventaire en jeux.
+                </p>
+                <a class="link" href="/RealmTech">
+                    back to home
+                </a>
+            </div>
+            <div class="card shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+                <InscriptionComponent client:load/>
+            </div>
         </div>
     </div>
-</div>
+</RealmTechAuthLayout>
