--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -5,24 +5,20 @@ import RealmTechAuthLayout from "../layout/RealmTechAuthLayout.astro";
     <div class="hero min-h-screen bg-rt">
         <div class="hero-content text-center">
             <div>
-                <div class="text-base-100 text-6xl text-center py-10">Telecharger RealmTech depuis de site internet !</div>
+                <div class="text-base-100 text-6xl text-center py-10">Telecharger RealmTech depuis le site internet !</div>
                 <div class="flex justify-center gap-10">
-                    <form method="get" action="releases/RealmTech-0.1.0.exe">
+                    <form method="get" action="releases/RealmTech-0.1.1.exe">
                         <button type="submit" class="btn btn-success">
-                            RealmTech-0.1.0.exe
+                            RealmTech-0.1.1.exe
                         </button>
                     </form>
-                    <form method="get" action="releases/RealmTech-0.1.0.jar">
+                    <form method="get" action="releases/RealmTech-0.1.1.jar">
                         <button type="submit" class="btn btn-success">
-                            RealmTech-0.1.0.jar
+                            RealmTech-0.1.1.jar
                         </button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-
-    <p>La dernière version est la 0.1.0</p>
-    <a class="link" >RealmTech-0.1.0.exe</a>
-    <a class="link" href="./releases/RealmTech-0.1.0.jar">RealmTech-0.1.0.exe</a>
 </RealmTechAuthLayout>
